tests/ui/issues/issue-11844.stderr
error[E0308]: mismatched types
  --> $DIR/issue-11844.rs:4:9
   |
LL |     match a {
   |           - this expression has type `Option<Box<{integer}>>`
LL |         Ok(a) =>
   |         ^^^^^ expected `Option<Box<{integer}>>`, found `Result<_, _>`
   |
   = note: expected enum `Option<Box<{integer}>>`
              found enum `Result<_, _>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
